--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 body {
 	margin: 2rem;
 	padding: 0;
 	background-color:#F5F5F5;
+	font-family: 'Open Sans', sans-serif;
 }
-.top-title .title, .sub-title{
-	text-align: center;
+.top-title .top-image {
+	margin-left: 33%;
 }
 hr {
 	margin: 3rem;
@@ -14,6 +16,12 @@ hr {
 	font-style: italic;
 	margin-left: 25%;
 	padding: 0rem;
+}
+.top-navbar li a{
+    padding: 0;
+    font: italic 20px Georgia;
+    color: #737373;
+    margin:0;
 }
 .breadcrumb-item a {
 	color: #000000;
@@ -30,7 +38,8 @@ hr {
 	padding: 5%;
 }
 .col-images .first-img {
-	border-radius: 100%;
+	border-radius: 50%;
+    padding: 10px;
 }
 .col-images .btn {
 	background-color: #383838;
@@ -40,6 +49,42 @@ hr {
 .bottom .details {
 	height: 300px;
 	background-color: #F5F5F5;
-
 }
+.bottom .details .grill-menu {
+	background-color: #383838;
+	color: #FFFFFF;
+	text-align: center;
+}
+.bottom .details .kerode {
+	font-size: 300;
+	color: #3a3a3a;
+	padding-bottom: 26px;
+}
+.bottom .details .fratione {
+	font-size:16px;
+    line-height: 23px;
+	margin-bottom: 24px;
+	margin: 0 0 10.5px;
+}
+.bottom .useful {
+	font: italic 22px/24px Georgia;
+    color: #484848;
+    margin: 0 0 15px;
+}
+.list li, a {
+	font: italic 15px Georgia;
+    color: #383838;
+    margin: 0 0 10px 0;
+}
+.quick {
+	font: italic 22px/24px Georgia;
+    color: #484848;
+    margin: 0 0 15px;
+}
+
+button {
+	padding: 10px;
+	margin: 0;
+}
+
 
